--- a/Android/ArtI/app/src/main/res/layout/item_artist.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_artist.xml
@@ -9,36 +9,40 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        >
+        android:layout_marginVertical="8dp">
 
         <ImageView
             android:id="@+id/iv_artist"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="4dp"
-            android:src="@drawable/temp_profile"
+            android:src="@drawable/basic_artist_profile"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_artist_name"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:fontFamily="@font/inter_28pt_black"
             android:text="잠만보"
             android:textSize="16sp"
+            android:maxLines="1"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_artist"
             app:layout_constraintTop_toTopOf="@id/iv_artist" />
 
         <TextView
             android:id="@+id/tv_artist_description"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:text="하루종일 잠만 자는 화가"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_artist_name"
             app:layout_constraintTop_toBottomOf="@id/tv_artist_name" />
 
