--- a/Android/ArtI/app/src/main/res/layout/fragment_login.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_login.xml
@@ -54,6 +54,7 @@
                 android:id="@+id/login_id_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="aa"
                 android:background="@drawable/shape_login_edit_text"
                 app:layout_constraintBottom_toTopOf="@id/login_pw_tv"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +77,7 @@
                 android:id="@+id/login_pw_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="aa"
                 android:background="@drawable/shape_login_edit_text"
                 app:layout_constraintBottom_toTopOf="@id/login_btn_layout"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -98,6 +100,7 @@
                     style="@style/ButtonRoundShort8"
                     android:layout_width="0dp"
                     android:layout_weight="1"
+                    android:background="@drawable/background_point_trans_button_round8"
                     android:layout_marginHorizontal="20dp"
                     android:layout_height="wrap_content"
                     android:text="로그인" />
@@ -105,6 +108,7 @@
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/sign_btn"
                     style="@style/ButtonRoundShort8"
+                    android:background="@drawable/background_point_trans_button_round8"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
