--- a/Android/ArtI/app/src/main/res/layout/item_preview_image.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_preview_image.xml
@@ -7,20 +7,29 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_preview_image"
         android:layout_width="wrap_content"
+        android:padding="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_preview_image"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_preview_image"
             android:layout_width="80dp"
             android:layout_height="130dp"
-            android:src="@drawable/temp_preview_image1"
-            android:scaleType="fitXY"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="8dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/iv_preview_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+
+                android:src="@drawable/temp_preview_image1" />
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
