feat: 양 옆 버튼 클릭 이벤트 구현

--- a/Android/ArtI/app/src/main/res/layout/fragment_art_museum.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_museum.xml
@@ -71,6 +71,7 @@
                     android:id="@+id/iv_left"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/ic_art_left"
                     app:layout_constraintBottom_toBottomOf="@id/iv_art_image"
                     app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +92,7 @@
                     android:id="@+id/iv_right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/ic_art_right"
                     app:layout_constraintBottom_toBottomOf="@id/iv_art_image"
                     app:layout_constraintEnd_toEndOf="parent"
