--- a/Android/ArtI/app/src/main/res/drawable/background_preview_focus.xml
+++ b/Android/ArtI/app/src/main/res/drawable/background_preview_focus.xml
@@ -7,10 +7,10 @@
 
 
     <stroke
-        android:width="8dp"
-        android:color="#808080" />
+        android:width="6dp"
+        android:color="#0125EB" />
 
 
-<!--    <corners android:radius="8dp" />-->
+    <corners android:radius="2dp" />
 
 </shape>
