feat: 미술품 id, 등록한 사진 ai Image API 연결

--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -133,6 +133,12 @@
         android:id="@+id/isSelectCreateImageFragment"
         android:name="com.hexa.arti.ui.artwork.IsSelectCreateImageFragment"
         android:label="IsSelectCreateImageFragment" >
+        <argument
+            android:name="artId"
+            app:argType="integer"
+            android:defaultValue="1">
+
+        </argument>
         <action
             android:id="@+id/action_isSelectCreateImageFragment_to_imageUploadFragment"
             app:destination="@id/imageUploadFragment" />
@@ -144,6 +150,12 @@
         android:id="@+id/imageUploadFragment"
         android:name="com.hexa.arti.ui.artwork.ImageUploadFragment"
         android:label="ImageUploadFragment" >
+        <argument
+            android:name="artId"
+            app:argType="integer"
+            android:defaultValue="1">
+
+        </argument>
         <action
             android:id="@+id/action_imageUploadFragment_to_artworkResultFragment"
             app:destination="@id/artworkResultFragment" />
@@ -152,6 +164,18 @@
         android:id="@+id/artworkResultFragment"
         android:name="com.hexa.arti.ui.artwork.ArtworkResultFragment"
         android:label="ArtworkResultFragment" >
+        <argument
+            android:name="artId"
+            app:argType="string"
+            android:defaultValue="1">
+
+        </argument>
+        <argument
+            android:name="artType"
+            app:argType="integer"
+            android:defaultValue="0">
+
+        </argument>
         <action
             android:id="@+id/action_artworkResultFragment_to_myGalleryHomeFragment2"
             app:destination="@id/myGalleryHomeFragment"
