--- a/Android/ArtI/app/src/main/res/layout/fragment_artwork_result.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_artwork_result.xml
@@ -78,7 +78,7 @@
             android:layout_marginHorizontal="20dp"
             android:paddingHorizontal="20dp"
             android:paddingVertical="5dp"
-            android:text="병나리자"
+            android:hint="제목을 입력해주세요"
             app:layout_constraintBottom_toBottomOf="@+id/artwork_result_tv"
             app:layout_constraintEnd_toEndOf="@+id/progressBar"
             app:layout_constraintStart_toEndOf="@+id/artwork_result_tv"
@@ -105,15 +105,15 @@
             app:layout_constraintStart_toStartOf="@+id/progressBar"
             app:layout_constraintTop_toBottomOf="@+id/artwork_result_img" />
 
-        <EditText
-            android:id="@+id/artwork_result_theme_et"
+        <Spinner
+            android:id="@+id/artwork_result_theme_spinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_profile_modify_edit_text"
-            android:text="초상화"
-            android:paddingVertical="5dp"
-            android:paddingHorizontal="10dp"
+            android:spinnerMode="dropdown"
             android:layout_marginHorizontal="20dp"
+            android:paddingVertical="5dp"
+android:background="@drawable/shape_profile_modify_edit_text"
+            android:popupBackground="@drawable/spinner_dropdown_pop"
             app:layout_constraintBottom_toBottomOf="@+id/artwork_result_theme_tv"
             app:layout_constraintEnd_toEndOf="@+id/progressBar"
             app:layout_constraintStart_toEndOf="@+id/artwork_result_theme_tv"
