--- a/Android/ArtI/app/src/main/res/layout/fragment_login.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_login.xml
@@ -78,6 +78,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="aa"
+                android:singleLine="true"
+                android:inputType="textPassword"
                 android:background="@drawable/shape_login_edit_text"
                 app:layout_constraintBottom_toTopOf="@id/login_btn_layout"
                 app:layout_constraintEnd_toEndOf="parent"
