--- a/Android/ArtI/app/src/main/res/layout/item_art.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_art.xml
@@ -36,13 +36,16 @@
 
         <TextView
             android:id="@+id/tv_art_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="4dp"
             android:text="@string/art"
             android:textColor="@color/white"
+            android:maxLines="1"
             android:textSize="20sp"
+            android:ellipsize="end"
+            app:layout_constraintEnd_toEndOf="@id/iv_art"
             app:layout_constraintBottom_toBottomOf="@id/iv_art"
             app:layout_constraintStart_toStartOf="@id/iv_art" />
 
