--- a/Android/ArtI/app/src/main/res/layout/fragment_select_artwork.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_select_artwork.xml
@@ -86,6 +86,7 @@
                 android:id="@+id/artwork_search_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:imeOptions="actionSearch"
                 android:inputType="text"
                 android:maxLines="1"
                 android:minHeight="0dp"
@@ -95,6 +96,18 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+
+        <TextView
+            android:id="@+id/no_search_tv"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="일치하는 결과가 없습니다."
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/artwork_search_tl" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/select_artwork_rv"
