--- a/Android/ArtI/app/src/main/res/layout/fragment_portfolio.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_portfolio.xml
@@ -9,10 +9,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_portfolio"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingBottom="40dp"
             tools:context=".ui.profile.PortfolioFragment">
 
             <TextView
