--- a/Android/ArtI/app/src/main/res/layout/fragment_my_page.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_my_page.xml
@@ -12,25 +12,7 @@
         android:layout_height="match_parent"
         tools:context=".ui.profile.MyPageFragment">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/my_page_profile_img_cv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="100dp"
-            android:layout_marginTop="30dp"
-            app:layout_constraintBottom_toTopOf="@id/my_page_profile_name_tv"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed">
 
-            <ImageView
-                android:id="@+id/my_page_profile_iv"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/profile_img" />
-        </androidx.cardview.widget.CardView>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -42,14 +24,13 @@
             android:id="@+id/my_page_profile_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="황병현"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:text="황병현님 어서오세요"
+            android:fontFamily="@font/inter_28pt_black"
+            android:textSize="24sp"
             android:layout_marginTop="16dp"
             app:layout_constraintBottom_toTopOf="@id/my_page_profile_modify_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/my_page_profile_img_cv" />
+            app:layout_constraintStart_toStartOf="@id/guideline"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <ImageView
             android:id="@+id/my_page_profile_modify_btn"
