feat : 미술관 내부 페이지 API 연결, 테마 내부 미술품 삭제 API 연결

--- a/Android/ArtI/app/src/main/res/layout/fragment_my_gallery.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_my_gallery.xml
@@ -182,6 +182,7 @@
                     android:id="@+id/my_gallery_theme_rv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
