--- a/Android/ArtI/app/src/main/res/layout/fragment_art_banner.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_banner.xml
@@ -10,7 +10,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.search.ArtBannerFragment">
+        android:paddingBottom="50dp"
+        tools:context=".ui.search.artwork.ArtBannerFragment">
 
         <ImageView
             android:id="@+id/iv_back"
