--- a/Android/ArtI/app/src/main/res/layout/item_theme.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_theme.xml
@@ -30,6 +30,7 @@
             android:layout_marginTop="8dp"
             android:scaleType="fitXY"
             android:src="@drawable/temp_preview_image1"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_theme_title" />
 
@@ -39,8 +40,9 @@
             android:layout_height="160dp"
             android:layout_marginTop="8dp"
             android:scaleType="fitXY"
-            app:layout_constraintEnd_toStartOf="@id/iv_preview_image3"
             android:src="@drawable/temp_preview_image2"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@id/iv_preview_image3"
             app:layout_constraintStart_toEndOf="@id/iv_preview_image1"
             app:layout_constraintTop_toBottomOf="@id/tv_theme_title" />
 
@@ -50,8 +52,9 @@
             android:layout_height="160dp"
             android:layout_marginTop="8dp"
             android:scaleType="fitXY"
-            app:layout_constraintEnd_toEndOf="parent"
             android:src="@drawable/temp_preview_image3"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_preview_image2"
             app:layout_constraintTop_toBottomOf="@id/tv_theme_title" />
 
