feat : 나의 미술관 테마 수정, 갤러리 수정 로직 추가

--- a/Android/ArtI/app/src/main/res/layout/fragment_art_gallery_detail.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_gallery_detail.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:paddingEnd="4dp"
-                android:text="테마 : 이것좀보세요"
+                android:text="나만의 미술품을 생성해보세요"
                 android:elevation="10dp"
                 app:textStrokeWidth="10"
                 app:textStrokeColor="@color/black"
