--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -115,6 +115,9 @@
         <argument
             android:name="imgTitle"
             app:argType="string" />
+        <argument
+            android:name="galleryId"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/artBannerFragment"
