--- a/Android/ArtI/app/src/main/res/layout/fragment_art_detail.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_detail.xml
@@ -73,11 +73,22 @@
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="40dp"
                 android:text="전시하기"
-                app:layout_constraintBottom_toBottomOf="@+id/art_detail_cv"
+                app:layout_constraintBottom_toTopOf="@+id/art_detail_ar_btn"
                 app:layout_constraintEnd_toEndOf="@+id/art_detail_create_tv"
                 app:layout_constraintStart_toStartOf="@+id/art_detail_title_tv"
                 app:layout_constraintTop_toBottomOf="@+id/art_detail_author_tv" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/art_detail_ar_btn"
+                style="@style/ButtonRoundShort8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="40dp"
+                android:text="AR 보기"
+                app:layout_constraintBottom_toBottomOf="@+id/art_detail_cv"
+                app:layout_constraintEnd_toEndOf="@+id/art_detail_save_btn"
+                app:layout_constraintStart_toStartOf="@+id/art_detail_save_btn"
+                app:layout_constraintTop_toBottomOf="@+id/art_detail_save_btn" />
             <TextView
                 android:id="@+id/art_detail_create_tv"
                 android:layout_width="51dp"
