--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -193,23 +193,22 @@
         android:id="@+id/artworkResultFragment"
         android:name="com.hexa.arti.ui.artwork.ArtworkResultFragment"
         android:label="ArtworkResultFragment">
+
         <argument
             android:name="artId"
             android:defaultValue="1"
-            app:argType="string">
-
-        </argument>
+            app:argType="string" />
         <argument
             android:name="artType"
             android:defaultValue="0"
-            app:argType="integer">
+            app:argType="integer" />
 
-        </argument>
+        <!-- popUpTo 설정 추가 -->
         <action
-            android:id="@+id/action_artworkResultFragment_to_myGalleryHomeFragment2"
-            app:destination="@id/myGalleryHomeFragment"
-            app:popUpTo="@id/myGalleryHomeFragment"
-            app:popUpToInclusive="true" />
+            android:id="@+id/action_artworkResultFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+        app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/settingFragment"
