--- a/Android/ArtI/app/src/main/res/layout/fragment_art_museum.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_museum.xml
@@ -50,6 +50,7 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="100dp"
                 app:layout_constraintTop_toBottomOf="@id/tv_museum_title">
 
 
@@ -137,7 +138,7 @@
 
                     <TextView
                         android:id="@+id/tv_introduce_content"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:fontFamily="@font/inter_18pt_bold"
