--- a/Android/ArtI/app/src/main/res/layout/fragment_art_banner.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_banner.xml
@@ -45,8 +45,10 @@
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.37"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_art"
+            app:layout_constraintVertical_bias="0.0"
             app:spanCount="2"
             tools:listitem="@layout/item_art" />
 
