--- a/Android/ArtI/app/src/main/res/layout/activity_aractivity.xml
+++ b/Android/ArtI/app/src/main/res/layout/activity_aractivity.xml
@@ -16,6 +16,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+<!--    <ImageView-->
+<!--        android:id="@+id/iv_test"-->
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
     <FrameLayout
         android:id="@+id/loadingView"
         android:layout_width="0dp"
