feat: 홈프래그먼트 + 배너프래그먼트 -> 갤러리 디테일 이동

--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -267,6 +267,9 @@
             android:name="gallery"
             app:argType="com.hexa.arti.data.model.artmuseum.GalleryBanner"
             app:nullable="false" />
+        <action
+            android:id="@+id/action_artMuseumFragment_to_artGalleryDetailFragment"
+            app:destination="@id/artGalleryDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/artistDetailFragment"
